# C-for-everybody

./: .gitignore  CMakeLists.txt  README.md
01_exploring_c/: copy_out.c  ex_1_19.c  fahr_cels_table.c  guessing_game.c  min_max.c  read_file.c
02_programming_in_c/: accumulator.c  atoi.c  binsearch.c  chap2_mask.c  itoa.c
02_programming_in_c/chap_2/: average.c  htoi.c  lower.c
02_programming_in_c/chap_3/: ex_3_4.c  int2_hex_bin.c  reverse.c  simpleuniq.c
02_programming_in_c/chap_4/: atof.c  calculator.c  simple_grep.c  simple_machine.c
03_data_structures_in_c/chap_5/: getfloat.c  getint.c  pointer_demo.c  strlen.c  swap_demo.c
03_data_structures_in_c/chap_6/: kr_06_01.c  kr_06_02.c  kr_06_03.c  kr_06_04.c  kr_06_05.c  kr_06_06.c  kr_06_07.c  kr_06_07.py
03_data_structures_in_c/demo/: ex_15_lbs290.c  ex_17_lbs290.c  ex_lbs_290.c  ex_ll_6a.c  ex_rs_10.c  ex_rs_11.c  kr_05_04.c
04_building_objects/: pydict.c  pystr.c
04_building_objects/encapsulation/: map.c
04_building_objects/oop/: point.c  pylist.c
exploring_c/: count_chars.c  ex_1_6.c  simple_wc.c
