cmake_minimum_required(VERSION 3.30)
project(C_for_everybody C)

set(CMAKE_C_STANDARD 11)

add_executable(ReadFile 01_exploring_c/read_file.c)
add_executable(MinMax 01_exploring_c/min_max.c)
add_executable(GuessingGame 01_exploring_c/guessing_game.c)
add_executable(FahrCelsTable 01_exploring_c/fahr_cels_table.c)
add_executable(CopyOut 01_exploring_c/copy_out.c)
add_executable(CountChars 01_exploring_c/count_chars.c)
add_executable(SimpleWC 01_exploring_c/simple_wc.c)
add_executable(CountDigitsOther 01_exploring_c/ex_1_6.c)
add_executable(StrReverse 01_exploring_c/ex_1_19.c)
add_executable(Mask 02_programming_in_c/chap2_mask.c)
add_executable(Hex2I 02_programming_in_c/htoi.c)
add_executable(Lower 02_programming_in_c/lower.c)
add_executable(Average 02_programming_in_c/average.c)
